# Action

./: classifier.py
action_colection/: CMakeLists.txt
action_colection/src/: keypoints.cpp
train/: action.py
train/model/: net_params.pkl  sit_net.pkl
train/runs/Aug26_08-34-00_MCCHENAction_Net/: events.out.tfevents.1566779640.MCCHEN
train/runs/Aug26_08-49-33_MCCHENAction_Net/: events.out.tfevents.1566780573.MCCHEN
train/runs/Aug26_08-49-57_MCCHENAction_Net/: events.out.tfevents.1566780597.MCCHEN
train/runs/Aug26_10-06-35_MCCHENAction_Net/: events.out.tfevents.1566785195.MCCHEN
train/runs/Aug26_15-37-10_MCCHENAction_Net/: events.out.tfevents.1566805030.MCCHEN
train/runs/Aug26_15-38-48_MCCHENAction_Net/: events.out.tfevents.1566805128.MCCHEN
train/runs/Aug26_15-39-24_MCCHENAction_Net/: events.out.tfevents.1566805164.MCCHEN
